--- a/src/main/resources/templates/views/mypage/order-detail.html
+++ b/src/main/resources/templates/views/mypage/order-detail.html
@@ -39,7 +39,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 									</p>
 			                        <p class="product-price" th:text="|${#numbers.formatDecimal(ordersDetail.paidAmount, 0, 'COMMA', 0, 'NONE')}원|">17,000원</p>
 		                        </div>
-		                        <button class="cart-btn">장바구니 다시 담기</button>
+		                        <!-- <button class="cart-btn">장바구니 다시 담기</button> -->
 		                    </div>
 		                </div>
 		                <div class="shipping-actions">
