--- a/src/main/resources/static/css/cart/cart-list.css
+++ b/src/main/resources/static/css/cart/cart-list.css
@@ -74,7 +74,7 @@ h1 {
 }
 
 .book-cover-img{
-    width: 150px;
+    width: 135px;
     height: 200px;
     background-color: #ddd;
 }
@@ -143,6 +143,7 @@ h1 {
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+    width: 100%;
 }
 
 .btn:hover {
