--- a/src/main/resources/static/css/mypage/order.css
+++ b/src/main/resources/static/css/mypage/order.css
@@ -63,6 +63,10 @@ th {
     border-radius: 5px;
 }
 
+.search-btn:hover{
+	background-color: var(--very-light-grey);
+}
+
 .search-bar input {
 	padding: 10px;
 	width: 200px;
@@ -76,7 +80,7 @@ th {
 }
 
 .book-cover-img {
-	width: 150px;
+	width: 135px;
 	height: 200px;
 	background-color: #ddd;
 }
@@ -164,7 +168,8 @@ th {
     text-align: center;
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 60px;
 }
 
 .notice-box {
