--- a/src/main/resources/static/css/mypage/question-form.css
+++ b/src/main/resources/static/css/mypage/question-form.css
@@ -21,7 +21,11 @@
 	height: 40px;
 	border-radius: 50%;
 	background-color: #888;
-	margin: 0 20px;
+	margin-right: 15px;
+}
+
+.memo > p{
+	font-size: 17px;
 }
 
 .username {
