--- a/src/main/resources/templates/views/mypage/sidebar.html
+++ b/src/main/resources/templates/views/mypage/sidebar.html
@@ -4,10 +4,10 @@
         <div class="profile-pic">😊</div>
         <div class="profile-info">
             <div sec:authorize="hasRole('ROLE_USER')"><b th:text="|${#authentication.principal.name}님|">이름</b></div>
-            <div>
-	            <span class="wish">찜 <b>0 </b> </span>
+            <a href="/mypage/favorites">
+	            <span class="wish">찜 <b th:text="${favorites != null ? #lists.size(favorites) : 0}">0 </b> </span>
 	            <span class="favorite-find"> 내 취향</span>
-            </div>
+            </a>
         </div>
     </div>
     <ul class="menu">
@@ -19,7 +19,7 @@
         <li><a href="/mypage/questions">1:1 문의 내역</a></li>
         <li class="menu-main">주문내역</li>
         <li><a href="/mypage/orders">주문/배송목록</a></li>
-        <li><a href="/mypage/exchange">교환/환불 목록</a></li>
-        <li><a href="/mypage/cancel">취소 목록</a></li>
+        <li><a href="/mypage/orders/exchange">교환/환불 목록</a></li>
+        <li><a href="/mypage/orders/cancel">취소 목록</a></li>
     </ul>
 </div>
