--- a/src/main/resources/templates/views/admin/users-detail.html
+++ b/src/main/resources/templates/views/admin/users-detail.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="info-item">
 						<label>주소</label>
-						<p th:text="${user.detailAddress}">아랄랄랄랄랄랄라</p>
+						<p th:text="${user.address + ' ' + user.detailAddress + ' ' + user.extraAddress}"></p>
 					</div>
 					<div class="info-item">
 						<label>나의 취향</label>
