--- a/src/main/resources/templates/views/seller/inventory.html
+++ b/src/main/resources/templates/views/seller/inventory.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="/css/admin/commons.css">
-<link rel="stylesheet" href="/css/admin/sidebar.css">
-<script src="/js/admin/sidebar.js"></script>
-<script src="/js/admin/commons.js"></script>
 
 <head>
+	<link rel="stylesheet" href="/css/admin/commons.css">
+	<link rel="stylesheet" href="/css/admin/sidebar.css">
+	<script src="/js/admin/sidebar.js"></script>
+	<script src="/js/admin/commons.js"></script>
+	<script src="/js/admin/inventory.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Product Management</title>
@@ -95,8 +96,8 @@
 							<td th:text="${dto.link}"></td>
 							<td th:text="${dto.discount}"></td>
 							<td>
-								<form th:action="|/admin/inventory/${dto.bookNum}|" onsubmit="return btnDeleteClicked()"
-									method="post">
+								<form th:action="|/seller/inventory/${dto.bookNum}|"
+									onsubmit="return btnDeleteClicked()" method="post">
 									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 									<input type="hidden" name="_method" value="delete">
 									<button type="submit">삭제</button>
