--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -75,7 +75,7 @@
 			</div>
 		</div>
 		<ul>
-			<li><a href="/bookList">베스트</a></li>
+			<li><a href="/bookList">도서</a></li>
 			<li><a href="/newbookList">신상품</a></li>
 			<li><a href="/event">이벤트</a></li>
 		</ul>
