--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -33,7 +33,7 @@
 					          <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}" 
                        th:value="${_csrf != null ? _csrf.token : ''}"/>
 				<div class="login-id-wrap">
-                    <input id="input-id" name="email" placeholder="아이디" type="text" required />
+                    <input id="input-id" name="email" placeholder="아이디(email)" type="text" required />
                 </div>
                 <div class="login-pw-wrap">
                     <input id="input-pw" name="password" placeholder="비밀번호" type="password" required />
