--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -84,8 +84,15 @@
 	<!-- 모달 창 (fileUploadContainer) -->
 	<div id="camera-modal" class="modal">
 	    <div id="fileUploadContainer" class="modal-register">
-	        <span class="close">&times;</span>
+	    	<div display="flex between">
+		    	<span class="img-search-text">이미지 검색</span>
+		        <span class="close">&times;</span>
+	        </div>
 	        <input type="file" id="imageFile" name="imageFile" accept="image/*" required>
+			<label for="imageFile" class="image-search-button flex j-center">
+				<i class="fa-solid fa-camera-retro camera-icon"></i>
+				<span>파일 선택</span>
+			</label>
 	        <img id="imagePreview" alt="Image preview">
 	        <br>
 	        <button id="confirmButton">검색</button>
