--- a/src/main/resources/templates/views/mypage/order-detail.html
+++ b/src/main/resources/templates/views/mypage/order-detail.html
@@ -20,7 +20,10 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	            </p>
 	
 	            <div class="shipping-status">
-	                <h2>배송중 - 오늘 도착 예정</h2>
+	                <h2 th:if="${ordersDetail.orderStatus == 1}">주문 완료 (배송 대기 중)</h2>
+	                <h2 th:if="${ordersDetail.orderStatus == 2}">배송중 - 오늘 도착</h2>
+	                <h2 th:if="${ordersDetail.orderStatus == 3}">배송 완료</h2>
+	                <h2 th:if="${ordersDetail.orderStatus == 4}">취소</h2>
 	                <div class="flex between">
 		                <div class="product-info">
 		                    <img th:src="${orderBooks[0].bookImg}">
