--- a/src/main/resources/templates/views/mypage/coupon.html
+++ b/src/main/resources/templates/views/mypage/coupon.html
@@ -88,7 +88,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 								<input type="hidden" name="_method" value="delete">
 				            	<i class="fa-regular fa-circle-check"></i> 
 				            	<span th:text="${expiredCoupon.couponName}">1,000원 할인</span>
-				            	<button class="trash-button-detail"><i class="fa-solid fa-trash trash-btn-detail"></i></button>
+				            	<!-- <button class="trash-button-detail"><i class="fa-solid fa-trash trash-btn-detail"></i></button>  -->
 				            </form>
 				            <div class="description" th:text="${expiredCoupon.couponDetail}">어린이 과학동아(2024년 8월 1일자)(15호)<br>1000원 할인쿠폰</div>
 				            <div class="dates">
