--- a/src/main/resources/templates/views/mypage/sidebar.html
+++ b/src/main/resources/templates/views/mypage/sidebar.html
@@ -14,6 +14,7 @@
         <li class="menu-main">마이페이지</li>
         <li><a href="/mypage/coupons">쿠폰</a></li>
         <li><a href="/mypage/favorites">나의 취향</a></li>
+        <li><a href="/mypage/recommends">도서 추천</a></li>
         <li><a href="/mypage/account">회원 정보</a></li>
         <li><a href="/mypage/account/delete">회원 탈퇴</a></li>
         <li><a href="/mypage/questions">1:1 문의 내역</a></li>
