--- a/src/main/resources/static/css/cart/completion.css
+++ b/src/main/resources/static/css/cart/completion.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-bottom: 70px;
+    margin-bottom: 45px;
 }
 .button {
     padding: 10px 20px;
@@ -98,4 +98,12 @@ td {
 
 .amount {
     margin-left: 10px;
+}
+
+
+/* 도서 추천 */
+.text-explanation{
+	display:block;
+	font-weight: 600;
+	margin-bottom: 35px;
 }
