--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -11,6 +11,16 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="/js/mainContent/menuButton.js"></script>
 	
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWHGY6WYK6"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-VWHGY6WYK6');
+	</script>
+	
 	
 	<!-- 챗봇  -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -52,6 +62,6 @@
 	<!-- ///////// -->
 	<!-- ///////// -->
 	<!-- ///////// -->
-	<header th:replace="~{views/commons/common :: bottom}"></header>
+	<footer th:replace="~{views/commons/common :: bottom}"></footer>
 </body>
 </html>
