feat:admin/seller

--- a/src/main/resources/templates/views/admin/inventory.html
+++ b/src/main/resources/templates/views/admin/inventory.html
@@ -70,6 +70,7 @@
 				<div class="action-buttons">
 					<button>삭제</button>
 					<button>비활성화</button>
+					<button>액셀다운</button>
 				</div>
 
 
