--- a/src/main/resources/templates/views/seller/inventory.html
+++ b/src/main/resources/templates/views/seller/inventory.html
@@ -68,6 +68,7 @@
 				<div class="action-buttons">
 					<button>삭제</button>
 					<button>비활성화</button>
+					<button>엑셀다운</button>
 				</div>
 
 
