--- a/src/main/resources/templates/views/seller/order.html
+++ b/src/main/resources/templates/views/seller/order.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/css/admin/commons.css">
-	<link rel="stylesheet" href="/css/admin/sidebar.css">
-	<meta name="_csrf" th:content="${_csrf.token}" />
-	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
-	<script src="/js/admin/sidebar.js"></script>
-	<script src="/js/admin/commons.js"></script>
-	<script src="/js/seller/order.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="/css/admin/commons.css">
+<link rel="stylesheet" href="/css/admin/sidebar.css">
+<meta name="_csrf" th:content="${_csrf.token}" />
+<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+<script src="/js/admin/sidebar.js"></script>
+<script src="/js/admin/commons.js"></script>
+<script src="/js/seller/order.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -20,44 +20,37 @@
 			<h1>주문 내역</h1>
 			<div class="search-box">
 				<div class="filter-section">
-					<label>주문번호</label>
-					<input type="text" placeholder="검색">
+					<label>주문번호</label> <input type="text" placeholder="검색">
 				</div>
 
 				<div class="filters">
 					<div class="filter-section">
-						<label>주문상태</label>
-						<input type="radio" name="status" checked> 전체
-						<input type="radio" name="status"> 주문
-						<input type="radio" name="status"> 입금
-						<input type="radio" name="status"> 준비
-						<input type="radio" name="status"> 배송
-						<input type="radio" name="status"> 완료
-						<input type="radio" name="status"> 전체취소
-						<input type="radio" name="status"> 부분취소
+						<label>주문상태</label> <input type="radio" name="status" checked>
+						전체 <input type="radio" name="status"> 주문 <input
+							type="radio" name="status"> 입금 <input type="radio"
+							name="status"> 준비 <input type="radio" name="status">
+						배송 <input type="radio" name="status"> 완료 <input
+							type="radio" name="status"> 전체취소 <input type="radio"
+							name="status"> 부분취소
 					</div>
 					<div class="filter-section">
-						<label>결제수단</label>
-						<input type="radio" name="payment" checked> 전체
-						<input type="radio" name="payment"> 신용카드
-						<input type="radio" name="payment"> 무통장
-						<input type="radio" name="payment"> 가상계좌
-						<input type="radio" name="payment"> 계좌이체
-						<input type="radio" name="payment"> 휴대폰
-						<input type="radio" name="payment"> PG간편결제
-						<input type="radio" name="payment"> KAKAOPAY
+						<label>결제수단</label> <input type="radio" name="payment" checked>
+						전체 <input type="radio" name="payment"> 신용카드 <input
+							type="radio" name="payment"> 무통장 <input type="radio"
+							name="payment"> 가상계좌 <input type="radio" name="payment">
+						계좌이체 <input type="radio" name="payment"> 휴대폰 <input
+							type="radio" name="payment"> PG간편결제 <input type="radio"
+							name="payment"> KAKAOPAY
 					</div>
 					<div class="filter-section">
-						<label>기타선택</label>
-						<input type="checkbox"> 미수금
-						<input type="checkbox"> 반품, 품절
-						<input type="checkbox"> 환불
-						<input type="checkbox"> 포인트주문
-						<input type="checkbox"> 쿠폰
+						<label>기타선택</label> <input type="checkbox"> 미수금 <input
+							type="checkbox"> 반품, 품절 <input type="checkbox">
+						환불 <input type="checkbox"> 포인트주문 <input type="checkbox">
+						쿠폰
 					</div>
 					<div class="filter-section">
-						<label>주문일자</label>
-						<input type="date" id="startDate"> ~ <input type="date" id="endDate">
+						<label>주문일자</label> <input type="date" id="startDate"> ~ <input
+							type="date" id="endDate">
 					</div>
 					<div class="btns">
 						<button class="search-btn">검색</button>
@@ -75,24 +68,25 @@
 							<th>유저이름</th>
 							<th>도서 번호</th>
 							<th>주문상태</th>
-							<th>주문상세번호 </th>
+							<th>주문상세번호</th>
 							<th>주문수량</th>
 							<th>주문날짜</th>
 							<th>총 결제금액</th>
 							<th>쿠폰번호</th>
 							<th>쿠폰이름</th>
+							<th>배송조회</th>
 							<th>상태변경</th>
 
 						</tr>
 					</thead>
 					<tbody>
-						<tr tr th:each="dto : ${list}">
+						<tr th:each="dto : ${list}">
 							<td th:text="${dto.merchantUid}"></td>
 							<td th:text="${dto.userId}"></td>
 							<td th:text="${dto.userName}"></td>
 							<td th:text="${dto.bookNum}"></td>
-							<td class="order-status" 
-							    th:text="${dto.orderStatus == 1 ? '주문완료' : 
+							<td class="order-status"
+								th:text="${dto.orderStatus == 1 ? '주문완료' : 
 							              (dto.orderStatus == 2 ? '배송중' : 
 							              (dto.orderStatus == 3 ? '배송완료' : '기타상태'))}">
 							</td>
@@ -102,11 +96,15 @@
 							<td th:text="${dto.paidAmount}"></td>
 							<td th:text="${dto.couponNum}"></td>
 							<td th:text="${dto.couponName}"></td>
+							<td><button onclick="openAndSubmitForm()">배송조회</button></td>
 							<td>
-								<form class="info-form" th:action="|/seller/order/${dto.merchantUid}|" method="post">
-									<input type="hidden" name="_method" value="put">
-									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-									<button class="status-change-btn" data-merchant-uid="${dto.merchantUid}"
+								<form class="info-form"
+									th:action="|/seller/order/${dto.merchantUid}|" method="post">
+									<input type="hidden" name="_method" value="put"> <input
+										type="hidden" th:name="${_csrf.parameterName}"
+										th:value="${_csrf.token}" />
+									<button class="status-change-btn"
+										data-merchant-uid="${dto.merchantUid}"
 										data-current-status="${dto.orderStatus}">상품발송</button>
 								</form>
 							</td>
@@ -116,6 +114,7 @@
 				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
+	</div>
 </body>
 
 </html>
