--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -5,82 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>북북 로그인</title>
     <link rel="stylesheet" href="/css/login/login.css">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
 
-    <div class="main">
-
-        <header>
-            <a href="/">
-                <div class="logo">
-                    <img src="/img/Untitled_removebg_preview.png" class="image" alt="Logo" />
-                </div>
-            </a>
-        </header>
-
-        <section class="login-buttons-wrap">
-            <button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
-            <button class="login-btn admin-login-btn" onclick="window.location.href='/login/admin'">판매자 로그인</button>
-        </section>
-
-        <!-- 로그인 부분 -->
-        <section class="login-wrap">
-                    <div th:if="${param.error}" class="error-message">
-                <p th:text="${param.exception}"></p>
+<div class="main">
+    <header>
+        <a href="/">
+            <div class="logo">
+                <img src="/img/Untitled_removebg_preview.png" class="image" alt="Logo" />
             </div>
-            <form action="/login" method="post">			
-					          <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}" 
-                       th:value="${_csrf != null ? _csrf.token : ''}"/>
-				<div class="login-id-wrap">
-                    <input id="input-id" name="email" placeholder="아이디(email)" type="text" required />
-                </div>
-                <div class="login-pw-wrap">
-                    <input id="input-pw" name="password" placeholder="비밀번호" type="password" required />
-                </div>
-                <div class="login-btn-wrap">
-                    <button id="login-btn" type="submit">로그인</button>
-                </div>
-            
-            </form>
+        </a>
+    </header>
 
-            <div class="under-login">
-            </div>
-        </section>
+    <section class="login-buttons-wrap">
+        <button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
+        <button class="login-btn admin-login-btn" onclick="window.location.href='/login/admin'">판매자 로그인</button>
+    </section>
 
-        <!-- 간편한 로그인 부분 -->
-        <section id="easy-login-wrap">
-            <div class="easy-login">
-                <p id="easy-login-text"></p>
-            </div>
-            <div id="easy-login-wrap-ko">
-                <div class="easy-login-box">
-                    <div class="kakao-login-ko">
-                        <img src="/img/kakao.png" alt="Kakao Login">
-                        <a href="/oauth2/authorization/kakao"  title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
-                    </div>
-                    <div class="naver-login-ko">
-                        <img src="/img/naver.png" alt="Naver Login">
-                        <a href="/oauth2/authorization/naver"  title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
-                    </div>
-                    <div class="google-login-ko">
-                        <img src="/img/google.png" alt="Google Login">
-                        <a href="/oauth2/authorization/google"  title="구글 아이디로 로그인">구글 아이디로 로그인</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+	<!-- 로그인 부분 -->
+	<section class="login-wrap">
+	    <div th:if="${param.error}" class="error-message">
+	        <p th:text="${param.exception}"></p>
+	    </div>
+	    <form action="/login" method="post" id="login-form">
+	        <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}"
+	               th:value="${_csrf != null ? _csrf.token : ''}"/>
+	        <div class="login-id-wrap">
+	            <input id="input-id" name="email" placeholder="아이디(email)" type="text" required />
+	        </div>
+	        <div class="login-pw-wrap">
+	            <input id="input-pw" name="password" placeholder="비밀번호" type="password" required />
+	        </div>
+	        <div class="recaptcha-container">
+	            <div id="recaptcha-widget"></div>
+	        </div>
+	        <div class="login-btn-wrap">
+	            <button id="login-btn" type="submit">로그인</button>
+	        </div>
+	    </form>
+	</section>
 
-        <!-- 아이디/PW 찾기 및 회원가입 부분 -->
-        <section class="find-signup-wrap">
-            <div id="find-signup-wrap-ko">
-                <span class="find-id"><a href="./find-id">아이디찾기</a></span>
-                <span class="find-pw"><a href="./find-password">비밀번호 찾기</a></span>
-                <span class="sign-up"><a href="./signup">회원가입</a></span>
-            </div>
-        </section>
+    <!-- 아이디/PW 찾기 및 회원가입 부분 -->
+    <section class="find-signup-wrap">
+        <div id="find-signup-wrap-ko">
+            <span class="find-id"><a href="./find-id">아이디찾기</a></span>
+            <span class="find-pw"><a href="./find-password">비밀번호 찾기</a></span>
+            <span class="sign-up"><a href="./signup">회원가입</a></span>
+        </div>
+    </section>
 
-    </div>
+</div>
+
+<script th:inline="javascript">
+    var siteKey = /*[[${reCaptchaSiteKey}]]*/ '	6LfzTTQqAAAAAEUNAL4aDXSUhEPhJ90W5m3EKoqC';
+    
+    var onloadCallback = function() {
+        grecaptcha.render('recaptcha-widget', {
+            'sitekey' : siteKey,
+            'callback' : verifyCallback
+        });
+    };
+
+    var verifyCallback = function(response) {
+        if (response) {
+            document.getElementById('login-btn').disabled = false;
+        }
+    };
+
+    document.getElementById('login-form').addEventListener('submit', function(e) {
+        var response = grecaptcha.getResponse();
+        if (!response) {
+            e.preventDefault();
+            alert('reCAPTCHA를 완료해주세요.');
+        }
+    });
+
+    // 페이지 로드 시 로그인 버튼 비활성화
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('login-btn').disabled = true;
+    });
+</script>
+
+<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+
 
 </body>
 </html>
