--- a/src/main/resources/templates/views/login/login-admin.html
+++ b/src/main/resources/templates/views/login/login-admin.html
@@ -39,7 +39,7 @@
         <div class="login-pw-wrap">
             <input id="input-pw" placeholder="비밀번호" name="password" type="password" required>
         </div>
-        <div class="recaptcha-container">
+        <div class="recaptcha-container-admin">
             <div class="g-recaptcha" th:data-sitekey="${reCaptchaSiteKey}"></div>
         </div>
         <div class="login-btn-wrap">
