--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -2,165 +2,139 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>북북 로그인</title>
-	<link rel="stylesheet" href="/css/login/login.css">
-	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>북북 로그인</title>
+    <link rel="stylesheet" href="/css/login/login.css">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
+    <div class="main">
+        <header>
+            <a href="/">
+                <div class="logo">
+                    <img src="/img/Untitled_removebg_preview.png" class="image" alt="Logo" />
+                </div>
+            </a>
+        </header>
 
-	<div class="main">
-		<header>
-			<a href="/">
-				<div class="logo">
-					<img src="/img/Untitled_removebg_preview.png" class="image" alt="Logo" />
-				</div>
-			</a>
-		</header>
+        <section class="login-buttons-wrap">
+            <button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
+            <button class="login-btn admin-login-btn" onclick="window.location.href='/login/admin'">판매자 로그인</button>
+        </section>
 
-		<section class="login-buttons-wrap">
-			<button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
-			<button class="login-btn admin-login-btn" onclick="window.location.href='/login/admin'">판매자 로그인</button>
-		</section>
+        <!-- 로그인 부분 -->
+        <section class="login-wrap">
+            <div th:if="${param.error}" class="error-message">
+                <p th:text="${param.exception}"></p>
+            </div>
+            <form action="/login" method="post" id="login-form">
+                <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}"
+                    th:value="${_csrf != null ? _csrf.token : ''}" />
+                <div class="login-id-wrap">
+                    <input id="input-id" name="email" placeholder="아이디(email)" type="text" required />
+                </div>
+                <div class="login-pw-wrap">
+                    <input id="input-pw" name="password" placeholder="비밀번호" type="password" required />
+                </div>
+                <div class="recaptcha-container">
+                    <div id="recaptcha-widget"></div>
+                </div>
+                <div class="login-btn-wrap">
+                    <button id="login-btn" type="submit">로그인</button>
+                </div>
+            </form>
+        </section>
 
-		<!-- 로그인 부분 -->
-		<section class="login-wrap">
-			<div th:if="${param.error}" class="error-message">
-				<p th:text="${param.exception}"></p>
-			</div>
-			<form action="/login" method="post" id="login-form">
-				<input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}"
-					th:value="${_csrf != null ? _csrf.token : ''}" />
-				<div class="login-id-wrap">
-					<input id="input-id" name="email" placeholder="아이디(email)" type="text" required />
-				</div>
-				<div class="login-pw-wrap">
-					<input id="input-pw" name="password" placeholder="비밀번호" type="password" required />
-				</div>
-				<!-- 간편한 로그인 부분 -->
-				<section id="easy-login-wrap">
-					<div class="easy-login">
-						<p id="easy-login-text"></p>
-					</div>
-					<div id="easy-login-wrap-ko">
-						<div class="easy-login-box">
-							<div class="kakao-login-ko">
-								<img src="/img/kakao.png" alt="Kakao Login">
-								<a href="#" onclick="socialLogin('kakao')" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
-							</div>
-							<div class="naver-login-ko">
-								<img src="/img/naver.png" alt="Naver Login">
-								<a href="#" onclick="socialLogin('naver')" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
-							</div>
-							<div class="google-login-ko">
-								<img src="/img/google.png" alt="Google Login">
-								<a href="#" onclick="socialLogin('google')" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
-							</div>
-						</div>
-					</div>
-				</section>
+        <!-- 간편한 로그인 부분 -->
+        <section id="easy-login-wrap">
+            <div class="easy-login">
+                <p id="easy-login-text"></p>
+            </div>
+            <div id="easy-login-wrap-ko">
+                <div class="easy-login-box">
+                    <div class="kakao-login-ko">
+                        <img src="/img/kakao.png" alt="Kakao Login">
+                        <a href="#" onclick="socialLogin('kakao')" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
+                    </div>
+                    <div class="naver-login-ko">
+                        <img src="/img/naver.png" alt="Naver Login">
+                        <a href="#" onclick="socialLogin('naver')" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
+                    </div>
+                    <div class="google-login-ko">
+                        <img src="/img/google.png" alt="Google Login">
+                        <a href="#" onclick="socialLogin('google')" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-				<div class="recaptcha-container">
-					<div id="recaptcha-widget"></div>
-				</div>
-				<div class="login-btn-wrap">
-					<button id="login-btn" type="submit">로그인</button>
-				</div>
-			</form>
-		</section>
+        <!-- 아이디/PW 찾기 및 회원가입 부분 -->
+        <section class="find-signup-wrap">
+            <div id="find-signup-wrap-ko">
+                <span class="find-id"><a href="./find-id">아이디찾기</a></span>
+                <span class="find-pw"><a href="./find-password">비밀번호 찾기</a></span>
+                <span class="sign-up"><a href="./signup">회원가입</a></span>
+            </div>
+        </section>
+    </div>
+    
+    <script th:inline="javascript">
+        var siteKey = /*[[${reCaptchaSiteKey}]]*/ '6LfzTTQqAAAAAEUNAL4aDXSUhEPhJ90W5m3EKoqC';
 
+        function onSubmit(token) {
+            document.getElementById("login-form").submit();
+        }
 
+        document.getElementById('login-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            var response = grecaptcha.getResponse();
+            if (!response) {
+                alert('reCAPTCHA를 완료해주세요.');
+            } else {
+                // reCAPTCHA 응답을 폼에 추가
+                var input = document.createElement('input');
+                input.type = 'hidden';
+                input.name = 'g-recaptcha-response';
+                input.value = response;
+                this.appendChild(input);
+                
+                // 폼 제출
+                this.submit();
+            }
+        });
 
-		<!-- 아이디/PW 찾기 및 회원가입 부분 -->
-		<section class="find-signup-wrap">
-			<div id="find-signup-wrap-ko">
-				<span class="find-id"><a href="./find-id">아이디찾기</a></span>
-				<span class="find-pw"><a href="./find-password">비밀번호 찾기</a></span>
-				<span class="sign-up"><a href="./signup">회원가입</a></span>
-			</div>
-		</section>
+        // 소셜 로그인 함수
+        function socialLogin(provider) {
+            var response = grecaptcha.getResponse();
+            if (!response) {
+                alert('reCAPTCHA를 완료해주세요.');
+                return;
+            }
+            window.location.href = '/oauth2/authorization/' + provider;
+        }
 
-	</div>
-	
-	<script th:inline="javascript">
-	    var siteKey = /*[[${reCaptchaSiteKey}]]*/ '		6LfzTTQqAAAAAEUNAL4aDXSUhEPhJ90W5m3EKoqC';
-	
-	    function onSubmit(token) {
-	        document.getElementById("login-form").submit();
-	    }
-	
-	    document.getElementById('login-form').addEventListener('submit', function(e) {
-	        e.preventDefault();
-	        grecaptcha.execute();
-	    });
-	
-	    // 소셜 로그인 함수
-	    function socialLogin(provider) {
-	        grecaptcha.ready(function() {
-	            grecaptcha.execute(siteKey, {action: 'social_login'}).then(function(token) {
-	                // reCAPTCHA 토큰을 hidden input에 추가
-	                var form = document.createElement('form');
-	                form.method = 'POST';
-	                form.action = '/oauth2/authorization/' + provider;
-	
-	                var input = document.createElement('input');
-	                input.type = 'hidden';
-	                input.name = 'g-recaptcha-response';
-	                input.value = token;
-	
-	                form.appendChild(input);
-	                document.body.appendChild(form);
-	                form.submit();
-	            });
-	        });
-	    }
-	</script>
+        var onloadCallback = function () {
+            grecaptcha.render('recaptcha-widget', {
+                'sitekey': siteKey,
+                'callback': verifyCallback
+            });
+        };
 
-	<script th:inline="javascript">
-		var siteKey = /*[[${reCaptchaSiteKey}]]*/ '6LfzTTQqAAAAAEUNAL4aDXSUhEPhJ90W5m3EKoqC';
+        var verifyCallback = function (response) {
+            if (response) {
+                document.getElementById('login-btn').disabled = false;
+            }
+        };
+        
+        // 페이지 로드 시 로그인 버튼 비활성화
+        document.addEventListener('DOMContentLoaded', function () {
+            document.getElementById('login-btn').disabled = true;
+        });
+    </script>
 
-		var onloadCallback = function () {
-			grecaptcha.render('recaptcha-widget', {
-				'sitekey': siteKey,
-				'callback': verifyCallback
-			});
-		};
-
-		var verifyCallback = function (response) {
-			if (response) {
-				document.getElementById('login-btn').disabled = false;
-			}
-		};
-
-		document.getElementById('login-form').addEventListener('submit', function (e) {
-			var response = grecaptcha.getResponse();
-			if (!response) {
-				e.preventDefault();
-				alert('reCAPTCHA를 완료해주세요.');
-			}
-		});
-		
-		// 페이지 로드 시 로그인 버튼 비활성화
-		document.addEventListener('DOMContentLoaded', function () {
-			document.getElementById('login-btn').disabled = true;
-		});
-
-		// 소셜 로그인 함수
-		function socialLogin(provider) {
-			var response = grecaptcha.getResponse();
-			if (!response) {
-				alert('reCAPTCHA를 완료해주세요.');
-				return;
-			}
-			window.location.href = '/oauth2/authorization/' + provider;
-		}
-	</script>
-
-	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
-
-
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
 </body>
 
 </html>
